[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version ="1.0",features=["full"]}
sqlx = {version="0.6",features=["postgres","runtime-tokio-rustls"]}
futures = "0.3"
rocket = "=0.5.0-rc.4"